# HeapEngine

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
demo/: CMakeLists.txt  main.c
include/: my_allocator.h
src/: CMakeLists.txt  my_allocator.c
tests/: CMakeLists.txt  test_main.c
